--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,9 +24,8 @@
 //  shape-rendering: geometricPrecision !important;
 //}
 
-/* ==========================================================================
-    BODY >>
-   ========================================================================== */
+/* BODY >>
+========================================================================== */
 body {
   position: relative;
   left: 0;
@@ -42,9 +41,8 @@ body {
   }
 }
 
-/* ==========================================================================
-    HEADER >>
-   ========================================================================== */
+/* HEADER >>
+========================================================================== */
 .header {
   position: fixed;
   top: 0;
@@ -110,9 +108,8 @@ body {
   }
 }
 
-/* ==========================================================================
-    HEADER ON SCROLL >>
-   ========================================================================== */
+/* HEADER ON SCROLL >>
+========================================================================== */
 .scroll {
   & .header {
     background: #fff;
@@ -142,16 +139,14 @@ body {
   }
 }
 
-/* ==========================================================================
-    FOOTER >>
-   ========================================================================== */
+/* FOOTER >>
+========================================================================== */
 .footer {
 
 }
 
-/* ==========================================================================
-    SECTIONS >>
-   ========================================================================== */
+/* SECTIONS >>
+========================================================================== */
 .section {
   padding: 5rem 0;
   &__title {
@@ -172,9 +167,8 @@ body {
   }
 }
 
-/* ==========================================================================
-    SECTIONS >> MAIN_HEADER
-   ========================================================================== */
+/* SECTIONS >> MAIN_HEADER
+========================================================================== */
 .section-main {
   padding: 0;
   &__bg {
@@ -208,26 +202,20 @@ body {
   }
 }
 
-
-
-/* ==========================================================================
-    MAIN MENU >>
-   ========================================================================== */
+/* MAIN MENU >>
+========================================================================== */
 .main-menu {
-  &__list {}
-  &__item {}
+  &__list {
+  }
+  &__item {
+  }
 }
 
+/* SECTIONS >> HEADER
+========================================================================== */
 
-/* ==========================================================================
-    SECTIONS >> HEADER
-   ========================================================================== */
-
-
-
-/* ==========================================================================
-    CALL WIDGET >>
-   ========================================================================== */
+/* CALL WIDGET >>
+========================================================================== */
 .call-widget {
   position: fixed;
   left: 0;
@@ -246,9 +234,8 @@ body {
   }
 }
 
-/* ==========================================================================
-    MEDIA QUERIES >>
-   ========================================================================== */
+/* MEDIA QUERIES >>
+========================================================================== */
 @media (max-width: 768px) {
   // HEADER
   .header {
@@ -279,8 +266,10 @@ body {
       left: 50%;
       box-shadow: inset 5px 0 10px 0 rgba(0, 0, 0, 0.05);
     }
-    &__list {}
-    &__item {}
+    &__list {
+    }
+    &__item {
+    }
   }
 
   // SECTIONS
