--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -175,7 +175,7 @@ body {
     display: table;
     width: 100%;
     padding: 0;
-    background: url('images/support_bg_blur.jpg') no-repeat center center #e5e5e5;
+    //background: url('images/support_bg_blur.jpg') no-repeat center center #e5e5e5;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -190,7 +190,7 @@ body {
 
     &-title {
       width: 70%;
-      color: #fff;
+      //color: #fff;
       font-size: 2.5rem;
       font-weight: 700;
       text-transform: uppercase;
@@ -259,19 +259,55 @@ body {
     right: 0;
     bottom: 0;
     background: #fff;
-    height: 1000px;
     width: 50%;
     transition: all .2s;
-    &--open {
+    &__list {
+      margin: 3rem 0 0;
+      padding: 0;
+      list-style: none;
+      line-height: 1rem;
+    }
+    &__item {
+      & a {
+        display: block;
+        padding: .5rem 1rem;
+        font-weight: 700;
+        color: #000;
+        text-decoration: none;
+      }
+    }
+  }
+  // OPEN MENU
+  body.menu-open {
+    left: -50%;
+    overflow: hidden;
+    & .main-menu {
       left: 50%;
       box-shadow: inset 5px 0 10px 0 rgba(0, 0, 0, 0.05);
     }
-    &__list {
+    & .button-menu {
+      & .icon-bar {
+        background: #000;
+        transition: all .3s;
+        &:nth-child(2) {
+          margin: 0 0 0 .5rem;
+          background: #f508ba;
+        }
+      }
     }
-    &__item {
+    & .modal_bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 120%;
+      background: #000;
+      opacity: .6;
+      z-index: 101;
+      transition: all .3s;
     }
   }
-
   // SECTIONS
   .section-main {
     &__intro {
