--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8634,7 +8634,7 @@ body {
   position: relative;
   color: #000;
   font-size: 2.2rem;
-  font-weight: 600;
+  font-weight: 500;
   text-transform: uppercase;
 }
 
@@ -8643,9 +8643,13 @@ body {
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 1.5rem;
+  width: 1.8rem;
   height: .25rem;
   background: #ff0063;
+}
+
+.section__subtitle {
+  text-transform: uppercase;
 }
 
 /* SECTIONS >> MAIN_HEADER
@@ -8802,6 +8806,15 @@ body {
   }
 
   .section-main__intro-description {
+    width: 100%;
+  }
+
+  .section__title {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+
+  .section__subtitle {
     width: 100%;
   }
 }
