--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -149,17 +149,20 @@ body {
     position: relative;
     color: #000;
     font-size: 2.2rem;
-    font-weight: 600;
+    font-weight: 500;
     text-transform: uppercase;
     &:after {
       content: '';
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 1.5rem;
+      width: 1.8rem;
       height: .25rem;
       background: #ff0063;
     }
+  }
+  &__subtitle {
+    text-transform: uppercase;
   }
 }
 
@@ -317,4 +320,16 @@ body {
       }
     }
   }
+
+  .section {
+    &__title {
+        width: 100%;
+        font-size: 1.5rem;
+      }
+      &__subtitle {
+        width: 100%;
+      }
+
+  }
+
 }
