--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -97,7 +97,7 @@ body {
         transition: all .3s;
         &:nth-child(2) {
           margin: 0 0 0 .5rem;
-          background: #f508ba;
+          background: #ff0063;
         }
       }
     }
@@ -270,7 +270,7 @@ body {
       & a {
         display: block;
         padding: .5rem 1rem;
-        font-weight: 700;
+        font-weight: 600;
         color: #000;
         text-decoration: none;
       }
@@ -290,7 +290,7 @@ body {
         transition: all .3s;
         &:nth-child(2) {
           margin: 0 0 0 .5rem;
-          background: #f508ba;
+          background: #ff0063;
         }
       }
     }
@@ -323,12 +323,21 @@ body {
 
   .section {
     &__title {
-        width: 100%;
-        font-size: 1.5rem;
+      width: 100%;
+      font-size: 1.5rem;
+      &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 1.25rem;
+        height: .15rem;
+        background: #ff0063;
       }
-      &__subtitle {
-        width: 100%;
-      }
+    }
+    &__subtitle {
+      width: 100%;
+    }
 
   }
 
